fixed carousel to full width, center aligned line logo with Nav.

--- a/app/src/css/style.css
+++ b/app/src/css/style.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 /* Changing fontstyle to Satoshi? */
 @theme {
-  --font-display: "Satoshi", "sans-serif";
   --breakpoint-3xl: 120rem;
   --color-avocado-100: oklch(0.99 0 0);
   --color-avocado-200: oklch(0.98 0.04 113.22);
